# langchain-docker-backend

./: .gitignore  LICENSE  README.md  README_CN.md  main.py  pyproject.toml
examples/: deepagents_example.py  langchain_example.py
src/langchain_docker_backend/: __init__.py  sandbox.py
tests/: test_sandbox.py
